--- a/Pilot_Class_Variabel_dan_Tipe_Data.ipynb
+++ b/Pilot_Class_Variabel_dan_Tipe_Data.ipynb
@@ -1082,18 +1082,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "---"
-      ],
-      "metadata": {
-        "id": "dR-6EfVYmBk6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "**Written By :** <br>\n",
-        "<a href=\"https://linkedin.com/in/bachtiyarma\"><img alt=\"Linked In Link\" src=\"https://img.shields.io/badge/-Bachtiyar%20M.%20Arief-0072b1?style=for-the-badge&logo=None&logoColor=white\" align=\"left\"/></a>\n",
+        "<a href=\"https://linkedin.com/in/nabilahtunnisa\"><img alt=\"Linked In Link\" src=\"https://img.shields.io/badge/-Nabilah%20 Tunnisa-0072b1?style=for-the-badge&logo=None&logoColor=white\" align=\"left\"/></a>\n",
         "\n",
         "<br><br>**for :**\n",
         "\n",
@@ -1101,6 +1091,16 @@
       ],
       "metadata": {
         "id": "IZHHncdiIrH3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "dR-6EfVYmBk6"
       }
     }
   ]
